# gaql-console

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/scripts/: build_checks.py
.github/workflows/: pypi_upload.yaml  tests.yaml
src/gaql_console/: __init__.py  __main__.py  api_client.py  console.py  context.py  exceptions.py  grammar.py
